objects/File_Total_Record_Trailer__c.object
<CustomObject>
    <fields>
        <fullName>BSB_Format_Filler__c</fullName>
        <label>BSB Format Filler</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Credit_Total_Amount__c</fullName>
        <label>File Credit Total Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Debit_Total_Amount__c</fullName>
        <label>File Debit Total Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Net_Total_Amount__c</fullName>
        <label>File Net Total Amount</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_count_of_Records_Type_1__c</fullName>
        <label>File count of Records Type 1</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blank2__c</fullName>
        <label>blank2</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blank3__c</fullName>
        <label>blank3</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>blank__c</fullName>
        <label>blank</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>File Total Record Trailer</label>
    <nameField>
        <label>File Total Record Trailer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>File Total Record Trailers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>